Adding nano target board.

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,9 +16,20 @@
 platform = atmelavr
 framework = arduino
 board = pro16MHzatmega328
-
 ; change microcontroller
 board_build.mcu = atmega328p
-
 ; change MCU frequency
 board_build.f_cpu = 16000000L
+build_flags = 
+    -Dpromini
+
+[env:nano]
+platform = atmelavr
+framework = arduino
+board = nanoatmega328new
+; change microcontroller
+board_build.mcu = atmega328p
+; change MCU frequency
+board_build.f_cpu = 16000000L
+build_flags = 
+    -Dnano
